--- a/public/index.html
+++ b/public/index.html
@@ -1,75 +1,185 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Earg AI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont;
+      background: #0b1220;
       color: #e5e7eb;
+      height: 100vh;
       display: flex;
-      justify-content: center;
-      padding-top: 40px;
+      flex-direction: column;
     }
-    .box {
-      width: 100%;
-      max-width: 500px;
+
+    header {
+      padding: 14px;
+      text-align: center;
       background: #020617;
-      padding: 20px;
-      border-radius: 8px;
+      border-bottom: 1px solid #1e293b;
+      font-weight: 600;
     }
-    textarea {
-      width: 100%;
-      height: 70px;
-      margin-top: 10px;
-      background: #020617;
-      color: white;
-      border: 1px solid #334155;
-      padding: 8px;
+
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
-    button {
-      margin-top: 10px;
-      width: 100%;
-      padding: 10px;
+
+    .msg {
+      max-width: 80%;
+      padding: 10px 12px;
+      border-radius: 12px;
+      line-height: 1.4;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
+
+    .user {
+      align-self: flex-end;
       background: #2563eb;
       color: white;
+      border-bottom-right-radius: 4px;
+    }
+
+    .ai {
+      align-self: flex-start;
+      background: #020617;
+      border: 1px solid #1e293b;
+      border-bottom-left-radius: 4px;
+    }
+
+    .time {
+      font-size: 11px;
+      opacity: 0.6;
+      margin-top: 4px;
+    }
+
+    footer {
+      display: flex;
+      gap: 8px;
+      padding: 10px;
+      border-top: 1px solid #1e293b;
+      background: #020617;
+    }
+
+    textarea {
+      flex: 1;
+      resize: none;
+      height: 44px;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #334155;
+      background: #020617;
+      color: white;
+      font-size: 15px;
+    }
+
+    button {
+      padding: 0 16px;
+      border-radius: 8px;
       border: none;
+      background: #2563eb;
+      color: white;
+      font-weight: 600;
       cursor: pointer;
     }
-    pre {
-      background: #020617;
-      padding: 10px;
-      white-space: pre-wrap;
-      border: 1px solid #334155;
-      margin-top: 10px;
+
+    button:disabled {
+      opacity: 0.6;
     }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h2>🧠 Earg AI</h2>
 
-    <textarea id="msg" placeholder="Type your message..."></textarea>
-    <button onclick="send()">Send</button>
+<header>🧠 Earg AI</header>
 
-    <pre id="reply"></pre>
-  </div>
+<div id="chat"></div>
 
-  <script>
-    async function send() {
-      const msg = document.getElementById("msg").value;
-      document.getElementById("reply").textContent = "Thinking...";
+<footer>
+  <textarea id="input" placeholder="Message Earg AI..."></textarea>
+  <button id="send">Send</button>
+</footer>
 
+<script>
+  const chat = document.getElementById("chat");
+  const input = document.getElementById("input");
+  const sendBtn = document.getElementById("send");
+
+  let history = JSON.parse(localStorage.getItem("earg_chat")) || [];
+
+  function time() {
+    return new Date().toLocaleTimeString([], { hour: "2-digit", minute: "2-digit" });
+  }
+
+  function addMessage(text, type) {
+    const wrap = document.createElement("div");
+    wrap.className = "msg " + type;
+    wrap.innerHTML = text + `<div class="time">${time()}</div>`;
+    chat.appendChild(wrap);
+    chat.scrollTop = chat.scrollHeight;
+  }
+
+  function renderHistory() {
+    chat.innerHTML = "";
+    history.forEach(m => addMessage(m.text, m.type));
+  }
+
+  renderHistory();
+
+  async function send() {
+    const text = input.value.trim();
+    if (!text) return;
+
+    input.value = "";
+    sendBtn.disabled = true;
+
+    history.push({ type: "user", text });
+    addMessage(text, "user");
+
+    history.push({ type: "ai", text: "Thinking..." });
+    addMessage("Thinking...", "ai");
+
+    chat.lastChild.scrollIntoView();
+
+    try {
       const res = await fetch("/api/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ message: msg })
+        body: JSON.stringify({ message: text })
       });
 
       const data = await res.json();
-      document.getElementById("reply").textContent = data.reply;
+
+      history.pop();
+      chat.removeChild(chat.lastChild);
+
+      history.push({ type: "ai", text: data.reply });
+      addMessage(data.reply, "ai");
+
+      localStorage.setItem("earg_chat", JSON.stringify(history));
+    } catch (e) {
+      addMessage("Error talking to AI.", "ai");
     }
-  </script>
+
+    sendBtn.disabled = false;
+  }
+
+  sendBtn.onclick = send;
+  input.addEventListener("keydown", e => {
+    if (e.key === "Enter" && !e.shiftKey) {
+      e.preventDefault();
+      send();
+    }
+  });
+</script>
+
 </body>
 </html>
