--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,7 @@
 <body>
 
 <header>
-  <span>◉</span> EARG AI <span>JARVIS</span>
+  <span>◉</span><span> EARG AI </span>
 </header>
 
 <div id="chat"></div>
