--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
 <header>
   <div class="title">
     <div class="dot"></div>
-    EARG AI — JARVIS
+    EARG AI
   </div>
   <div class="clear" onclick="clearChat()">Clear</div>
 </header>
