--- a/public/index.html
+++ b/public/index.html
@@ -1,218 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>EARG AI</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="UTF-8" />
+<title>EARG AI</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <style>
-    :root {
-      --bg: #020617;
-      --panel: rgba(15,23,42,.92);
-      --border: #1e293b;
-      --accent: #38bdf8;
-      --user: #2563eb;
-      --text: #e5e7eb;
-      --muted: #94a3b8;
-    }
+<style>
+:root {
+  --bg:#020617;
+  --panel:rgba(15,23,42,.92);
+  --border:#1e293b;
+  --accent:#38bdf8;
+  --user:#2563eb;
+  --text:#e5e7eb;
+  --muted:#94a3b8;
+}
 
-    * { box-sizing: border-box; }
+*{box-sizing:border-box}
 
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system;
-      background: radial-gradient(circle at top, #020617, #000);
-      color: var(--text);
-      height: 100vh;
-      overflow: hidden;
-    }
+body{
+  margin:0;
+  font-family:system-ui,-apple-system;
+  background:radial-gradient(circle at top,#020617,#000);
+  color:var(--text);
+  height:100vh;
+  overflow:hidden;
+}
 
-    /* ===== BOOT SCREEN ===== */
-    #boot {
-      position: fixed;
-      inset: 0;
-      background: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
-      animation: fadeOut 1s ease forwards;
-      animation-delay: 3.6s;
-    }
+/* ===== BOOT ===== */
+#boot{
+  position:fixed;
+  inset:0;
+  background:#000;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:999;
+  animation:fadeOut .8s ease forwards;
+  animation-delay:3s;
+}
+.boot-box{text-align:center;color:var(--accent);font-weight:600}
+.boot-line{opacity:0;animation:show .35s ease forwards}
+.boot-line:nth-child(1){animation-delay:.2s}
+.boot-line:nth-child(2){animation-delay:.7s}
+.boot-line:nth-child(3){animation-delay:1.2s}
+.boot-line:nth-child(4){animation-delay:1.7s}
+.boot-line:nth-child(5){animation-delay:2.2s}
+@keyframes show{to{opacity:1}}
+@keyframes fadeOut{to{opacity:0;pointer-events:none}}
 
-    .boot-box {
-      text-align: center;
-      color: var(--accent);
-      font-weight: 600;
-      letter-spacing: .6px;
-    }
+/* ===== HEADER ===== */
+header{
+  position:fixed;
+  top:0;left:0;right:0;
+  height:56px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:0 14px;
+  background:rgba(2,6,23,.95);
+  border-bottom:1px solid var(--border);
+  z-index:10;
+}
+.title{display:flex;align-items:center;gap:8px;font-weight:600}
+.dot{width:8px;height:8px;border-radius:50%;background:var(--accent);box-shadow:0 0 12px var(--accent)}
+.clear{font-size:13px;color:var(--muted);cursor:pointer}
 
-    .boot-line {
-      opacity: 0;
-      animation: show 0.4s ease forwards;
-    }
+/* ===== CHAT ===== */
+#chat{
+  position:absolute;
+  top:56px;
+  bottom:72px;
+  left:0;right:0;
+  padding:16px;
+  overflow-y:auto;
+  display:flex;
+  flex-direction:column;
+  gap:16px;
+}
+.bubble{
+  max-width:85%;
+  padding:14px 16px;
+  border-radius:16px;
+  line-height:1.55;
+  animation:slide .2s ease;
+  white-space:pre-wrap;
+}
+.user{margin-left:auto;background:linear-gradient(135deg,#2563eb,#1d4ed8);color:white}
+.ai{background:var(--panel);border:1px solid var(--border)}
+.time{font-size:11px;color:var(--muted);margin-top:4px;text-align:right}
+.typing{font-size:13px;color:var(--muted);font-style:italic}
+.live-badge{font-size:11px;color:var(--accent);margin-top:6px}
 
-    .boot-line:nth-child(1) { animation-delay: .2s; }
-    .boot-line:nth-child(2) { animation-delay: .8s; }
-    .boot-line:nth-child(3) { animation-delay: 1.4s; }
-    .boot-line:nth-child(4) { animation-delay: 2s; }
-    .boot-line:nth-child(5) { animation-delay: 2.6s; }
+/* ===== INPUT ===== */
+footer{
+  position:fixed;
+  bottom:0;left:0;right:0;
+  height:72px;
+  display:flex;
+  gap:10px;
+  padding:12px;
+  background:rgba(2,6,23,.98);
+  border-top:1px solid var(--border);
+}
+textarea{
+  flex:1;
+  resize:none;
+  padding:14px;
+  border-radius:14px;
+  border:1px solid var(--border);
+  background:#020617;
+  color:var(--text);
+  font-size:15px;
+}
+button{
+  padding:0 18px;
+  border-radius:14px;
+  border:none;
+  font-weight:600;
+  background:linear-gradient(135deg,#38bdf8,#0ea5e9);
+  color:#020617;
+}
 
-    @keyframes show { to { opacity: 1; } }
-
-    @keyframes fadeOut {
-      to { opacity: 0; pointer-events: none; }
-    }
-
-    /* ===== HEADER ===== */
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 56px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 14px;
-      background: rgba(2,6,23,.95);
-      border-bottom: 1px solid var(--border);
-      z-index: 10;
-      font-weight: 600;
-    }
-
-    .title {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: var(--accent);
-      box-shadow: 0 0 12px var(--accent);
-    }
-
-    .clear {
-      font-size: 13px;
-      color: var(--muted);
-      cursor: pointer;
-    }
-
-    /* ===== CHAT ===== */
-    #chat {
-      position: absolute;
-      top: 56px;
-      bottom: 72px;
-      left: 0;
-      right: 0;
-      padding: 16px;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-    }
-
-    .bubble {
-      max-width: 85%;
-      padding: 14px 16px;
-      border-radius: 16px;
-      line-height: 1.55;
-      animation: slide .25s ease;
-      white-space: pre-wrap;
-      word-wrap: break-word;
-    }
-
-    .user {
-      margin-left: auto;
-      background: linear-gradient(135deg,#2563eb,#1d4ed8);
-      color: white;
-    }
-
-    .ai {
-      background: var(--panel);
-      border: 1px solid var(--border);
-    }
-
-    .time {
-      font-size: 11px;
-      color: var(--muted);
-      margin-top: 4px;
-      text-align: right;
-    }
-
-    .typing {
-      font-size: 14px;
-      color: var(--muted);
-      animation: pulse 1.2s infinite;
-    }
-
-    .live-badge {
-      font-size: 11px;
-      color: var(--accent);
-      margin-top: 6px;
-      opacity: 0.85;
-    }
-
-    /* ===== INPUT ===== */
-    footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 72px;
-      display: flex;
-      gap: 10px;
-      padding: 12px;
-      background: rgba(2,6,23,.98);
-      border-top: 1px solid var(--border);
-      z-index: 10;
-    }
-
-    textarea {
-      flex: 1;
-      resize: none;
-      padding: 14px;
-      border-radius: 14px;
-      border: 1px solid var(--border);
-      background: #020617;
-      color: var(--text);
-      font-size: 15px;
-      outline: none;
-    }
-
-    button {
-      padding: 0 18px;
-      border-radius: 14px;
-      border: none;
-      font-weight: 600;
-      background: linear-gradient(135deg,#38bdf8,#0ea5e9);
-      color: #020617;
-      box-shadow: 0 0 14px rgba(56,189,248,.5);
-    }
-
-    @keyframes slide {
-      from { opacity: 0; transform: translateY(6px); }
-      to { opacity: 1; }
-    }
-
-    @keyframes pulse {
-      0% { opacity: .4 }
-      50% { opacity: 1 }
-      100% { opacity: .4 }
-    }
-
-    @media (max-width:600px) {
-      .bubble { max-width: 92%; }
-    }
-  </style>
+@keyframes slide{from{opacity:0;transform:translateY(6px)}to{opacity:1}}
+@media(max-width:600px){.bubble{max-width:92%}}
+</style>
 </head>
 
 <body>
 
-<!-- BOOT -->
 <div id="boot">
   <div class="boot-box">
     <div class="boot-line">EARG AI</div>
@@ -224,10 +140,7 @@
 </div>
 
 <header>
-  <div class="title">
-    <div class="dot"></div>
-    EARG AI
-  </div>
+  <div class="title"><div class="dot"></div>EARG AI</div>
   <div class="clear" onclick="clearChat()">Clear</div>
 </header>
 
@@ -239,89 +152,69 @@
 </footer>
 
 <script>
-  const chat = document.getElementById("chat");
-  const input = document.getElementById("input");
+const chat=document.getElementById("chat");
+const input=document.getElementById("input");
 
-  // ===== SESSION ID (NEW) =====
-  let sessionId = localStorage.getItem("earg_session");
-  if (!sessionId) {
-    sessionId = crypto.randomUUID();
-    localStorage.setItem("earg_session", sessionId);
+function time(){
+  return new Date().toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'});
+}
+
+function add(role,text,usedInternet=false){
+  const wrap=document.createElement("div");
+  const msg=document.createElement("div");
+  msg.className="bubble "+role;
+  msg.textContent=text;
+
+  const t=document.createElement("div");
+  t.className="time";
+  t.textContent=time();
+
+  wrap.appendChild(msg);
+  if(role==="ai" && usedInternet){
+    const b=document.createElement("div");
+    b.className="live-badge";
+    b.textContent="🌐 Live data used";
+    wrap.appendChild(b);
   }
-  // ============================
+  wrap.appendChild(t);
+  chat.appendChild(wrap);
+  chat.scrollTop=chat.scrollHeight;
+}
 
-  function time() {
-    return new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+async function send(){
+  const text=input.value.trim();
+  if(!text)return;
+  input.value="";
+  add("user",text);
+
+  const thinking=document.createElement("div");
+  thinking.className="typing";
+  thinking.textContent="🧠 Thinking internally…";
+  chat.appendChild(thinking);
+  chat.scrollTop=chat.scrollHeight;
+
+  try{
+    const res=await fetch("/api/chat",{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({message:text})
+    });
+    const data=await res.json();
+    thinking.remove();
+    add("ai",data.reply,data.usedInternet);
+  }catch{
+    thinking.remove();
+    add("ai","Something went wrong. Please try again.");
   }
+}
 
-  function add(role, text, usedInternet = false) {
-    const wrap = document.createElement("div");
+function clearChat(){chat.innerHTML=""}
 
-    const msg = document.createElement("div");
-    msg.className = "bubble " + role;
-    msg.textContent = text;
-
-    const t = document.createElement("div");
-    t.className = "time";
-    t.textContent = time();
-
-    wrap.appendChild(msg);
-
-    if (role === "ai" && usedInternet) {
-      const badge = document.createElement("div");
-      badge.className = "live-badge";
-      badge.textContent = "🌐 Live data used";
-      wrap.appendChild(badge);
-    }
-
-    wrap.appendChild(t);
-    chat.appendChild(wrap);
-    chat.scrollTop = chat.scrollHeight;
+input.addEventListener("keydown",e=>{
+  if(e.key==="Enter"&&!e.shiftKey){
+    e.preventDefault();send();
   }
-
-  async function send() {
-    const text = input.value.trim();
-    if (!text) return;
-
-    input.value = "";
-    add("user", text);
-
-    const typing = document.createElement("div");
-    typing.className = "typing";
-    typing.textContent = "Earg AI is thinking…";
-    chat.appendChild(typing);
-    chat.scrollTop = chat.scrollHeight;
-
-    try {
-      const res = await fetch("/api/chat", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          message: text,
-          sessionId   // NEW
-        })
-      });
-
-      const data = await res.json();
-      typing.remove();
-      add("ai", data.reply, data.usedInternet === true);
-
-    } catch (err) {
-      typing.remove();
-      add("ai", "Something went wrong. Please try again.");
-    }
-  }
-
-  function clearChat() {
-    chat.innerHTML = "";
-  }
-
-  input.addEventListener("keydown", e => {
-    if (e.key === "Enter" && !e.shiftKey) {
-      e.preventDefault();
-      send();
-    }
-  });
+});
 </script>
 
 </body>
