--- a/public/index.html
+++ b/public/index.html
@@ -20,16 +20,22 @@
 
 html,body{
   margin:0;
+  padding:0;
   height:100%;
+  overflow:hidden;
 }
 
 body{
   font-family:system-ui,-apple-system;
   background:radial-gradient(circle at top,#020617,#000);
   color:var(--text);
+}
+
+/* APP WRAPPER */
+#app{
   display:flex;
   flex-direction:column;
-  overflow:hidden;
+  height:100%;
 }
 
 /* ===== BOOT ===== */
@@ -57,13 +63,13 @@ body{
 /* ===== HEADER ===== */
 header{
   height:56px;
+  flex-shrink:0;
   display:flex;
   align-items:center;
   justify-content:space-between;
   padding:0 14px;
   background:rgba(2,6,23,.95);
   border-bottom:1px solid var(--border);
-  flex-shrink:0;
 }
 .title{display:flex;align-items:center;gap:8px;font-weight:600}
 .dot{width:8px;height:8px;border-radius:50%;background:var(--accent);box-shadow:0 0 12px var(--accent)}
@@ -72,8 +78,8 @@ header{
 /* ===== CHAT ===== */
 #chat{
   flex:1;
-  padding:16px;
   overflow-y:auto;
+  padding:16px;
   display:flex;
   flex-direction:column;
   gap:16px;
@@ -96,12 +102,12 @@ header{
 /* ===== INPUT ===== */
 footer{
   height:72px;
+  flex-shrink:0;
   display:flex;
   gap:10px;
   padding:12px;
   background:rgba(2,6,23,.98);
   border-top:1px solid var(--border);
-  flex-shrink:0;
 }
 textarea{
   flex:1;
@@ -139,22 +145,39 @@ button{
   </div>
 </div>
 
-<header>
-  <div class="title"><div class="dot"></div>EARG AI</div>
-  <div class="clear" onclick="clearChat()">Clear</div>
-</header>
+<div id="app">
+  <header>
+    <div class="title"><div class="dot"></div>EARG AI</div>
+    <div class="clear" onclick="clearChat()">Clear</div>
+  </header>
 
-<div id="chat"></div>
+  <div id="chat"></div>
 
-<footer>
-  <textarea id="input" placeholder="Ask anything…"></textarea>
-  <button onclick="send()">Send</button>
-</footer>
+  <footer>
+    <textarea id="input" placeholder="Ask anything…"></textarea>
+    <button onclick="send()">Send</button>
+  </footer>
+</div>
 
 <script>
 const chat=document.getElementById("chat");
 const input=document.getElementById("input");
+const app=document.getElementById("app");
 
+/* 🔥 KEYBOARD-SAFE VIEWPORT FIX */
+function resizeApp(){
+  const vh = window.visualViewport
+    ? window.visualViewport.height
+    : window.innerHeight;
+  app.style.height = vh + "px";
+}
+resizeApp();
+window.addEventListener("resize", resizeApp);
+if(window.visualViewport){
+  window.visualViewport.addEventListener("resize", resizeApp);
+}
+
+/* CHAT LOGIC */
 function time(){
   return new Date().toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'});
 }
@@ -170,14 +193,12 @@ function add(role,text,usedInternet=false){
   t.textContent=time();
 
   wrap.appendChild(msg);
-
   if(role==="ai" && usedInternet){
     const b=document.createElement("div");
     b.className="live-badge";
     b.textContent="🌐 Live data used";
     wrap.appendChild(b);
   }
-
   wrap.appendChild(t);
   chat.appendChild(wrap);
   chat.scrollTop=chat.scrollHeight;
